# spg

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  elasticPendulum.cpp  energyViewer.cpp  rigidBodyTests.cpp  solverCompare.cpp
spg/: CMakeLists.txt
spg/include/spg/: constants.h  types.h
spg/include/spg/geom/: tetrahedralMesh.h  triangleMesh.h
spg/include/spg/geom/io/: msh.h  obj.h
spg/include/spg/sim/: rigidBodyGroup.h  simObject.h
spg/include/spg/sim/energy/: BaraffWitkinBendingEnergy.h  baraffWitkinBendingEnergy.h  discreteBendingEnergy.h  energy.h  membraneBaraffWitkinEnergy.h  membraneChoiEnergy.h  membraneStvkEnergy.h  quadraticBendingEnergy.h  rigidBodyOrientationAlignmentEnergy.h  rigidBodySpringAnchorEnergy.h  rigidBodySpringEnergy.h  rigidBodySpringSquaredEnergy.h  springAnchorEnergy.h  springAnchorRigidBodyEnergy.h  springContinuumEnergy.h  springEnergy.h  springRigidBodyEnergy.h  springSquaredContinuumEnergy.h  springSquaredRigidBodyEnergy.h  stableNeoHookeanEnergy.h  stableSquaredNeoHookeanEnergy.h  staticLoadEnergy.h  stvkEnergy.h
spg/include/spg/sim/simObject/: particleGroup.h  rigidBodyGroup.h
spg/include/spg/sim/solver/: baseSolver.h  bdf2.h  implicitEulerBaraffWitkin.h  implicitEulerBase.h  implicitEulerNewtonDv.h  implicitEulerNewtonDx.h  implicitEulerNewtonRobust.h  pgd.h  quasiStaticNewton.h  quasiStaticNewtonRobust.h  simplecticEuler.h  staticNewton.h  vbd.h  xpbd.h
spg/include/spg/utils/: functionalUtilities.h  graphColoring.h  timer.h
spg/source/geom/io/: msh.cpp  obj.cpp
spg/source/sim/: rigidBodyGroup.cpp  simObject.cpp
spg/source/sim/energy/: baraffWitkinBendingEnergy.cpp  discreteBendingEnergy.cpp  membraneBaraffWitkinEnergy.cpp  membraneChoiEnergy.cpp  membraneStvkEnergy.cpp  quadraticBendingEnergy.cpp  rigidBodyOrientationAlignmentEnergy.cpp  rigidBodySpringAnchorEnergy.cpp  rigidBodySpringEnergy.cpp  rigidBodySpringSquaredEnergy.cpp  springAnchorEnergy.cpp  springAnchorRigidBodyEnergy.cpp  springContinuumEnergy.cpp  springEnergy.cpp  springRigidBodyEnergy.cpp  springSquaredContinuumEnergy.cpp  springSquaredRigidBodyEnergy.cpp  stableNeoHookeanEnergy.cpp  stableSquaredNeoHookeanEnergy.cpp  staticLoadEnergy.cpp  stvkEnergy.cpp
spg/source/sim/simObject/: particleGroup.cpp  rigidBodyGroup.cpp
spg/source/sim/solver/: baseSolver.cpp  bdf2.cpp  implicitEulerBaraffWitkin.cpp  implicitEulerBase.cpp  implicitEulerNewtonDv.cpp  implicitEulerNewtonDx.cpp  implicitEulerNewtonRobust.cpp  pgd.cpp  quasiStaticNewton.cpp  quasiStaticNewtonRobust.cpp  simplecticEuler.cpp  staticNewton.cpp  vbd.cpp  xpbd.cpp
spg/source/utils/: graphColoring.cpp
